k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-frontend
  namespace: sms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms-frontend
  template:
    metadata:
      labels:
        app: sms-frontend
    spec:
      containers:
        - name: frontend
          image: 048844500645.dkr.ecr.ap-northeast-2.amazonaws.com/sms-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
