k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-frontend
  namespace: sms
spec:
  selector:
    app: sms-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
